--- a/config/crd/bases/monitor.my.domain_stuckpodsnotifiers.yaml
+++ b/config/crd/bases/monitor.my.domain_stuckpodsnotifiers.yaml
@@ -106,6 +106,30 @@ spec:
             type: object
           status:
             description: StuckPodsNotifierStatus defines the observed state of StuckPodsNotifier
+            properties:
+              pendingPodsCount:
+                type: integer
+              stuckPodsCount:
+                type: integer
+              stuckPodsDetails:
+                items:
+                  properties:
+                    creationTime:
+                      type: string
+                    name:
+                      type: string
+                    namespace:
+                      type: string
+                  required:
+                  - creationTime
+                  - name
+                  - namespace
+                  type: object
+                type: array
+            required:
+            - pendingPodsCount
+            - stuckPodsCount
+            - stuckPodsDetails
             type: object
         type: object
     served: true
